@@ -1428,6 +1428,10 @@ If you have this image in full resolution upload this one, otherwise change the 
 'destfilename'                => 'Destination filename',
 'watchthisupload'             => 'Watch this page',
 'filewasdeleted'              => 'A file of this name has been previously uploaded and subsequently deleted. You should check the $1 before proceeding to upload it again.',
+'upload-wasdeleted'           => "'''Warning: You are uploading a file that was previously deleted.'''
+
+You should consider whether it is appropriate to continue uploading this file.
+The deletion log for this file is provided here for convenience:",
 'filename-bad-prefix'             => 'The name of the file you are uploading begins with <strong>"$1"</strong>, which is a non-descriptive name typically assigned automatically by digital cameras. Please choose a more descriptive name for your file.',
 'filename-prefix-blacklist'        => ' #<!-- leave this line exactly as it is --> <pre>
 # Syntax is as follows: 
